<resources>
    <string name="app_name">Hi N2NGO</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="facebook_app_id" translatable="false"></string>

    <string name="no_config">None</string>
    <string name="title_add_setting">New Config</string>
    <string name="title_update_setting">Update Config</string>
    <string name="title_setting_list">All Configs</string>
    
    <string name="dialog_add_succeed">Add succeed!</string>
    <string name="dialog_save_succeed">Save succeed!</string>
    <string name="dialog_update_succeed">Update succeed!</string>
    <string name="dialog_update_request">Update this config, and reconnect to n2n network?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_reconnect">Reconnect n2n network with new config?</string>
    <string name="dialog_delete">Are you sure to delete this config?</string>

    <string name="toast_connect_failed">Failed to connect to the n2n network</string>
    <string name="toast_disconnect_and_retry">Disconnected with supernode and try to reconnect to n2n network later</string>

    <string name="notify_disconnect">Disconnected with supernode</string>
    <string name="notify_reconnected">Reconnect to supernode successfully</string>

    <string name="notification_channel_id_default" translatable="false">default</string>
    <string name="notification_channel_name_default" translatable="false">default</string>

    <string-array name="vpn_session_name">
        <item>n2n_v1</item>
        <item>n2n_v2</item>
        <item>n2n_v2s</item>
        <item>n2n_v3</item>
        <item>N2N GO</item>
    </string-array>

    <string name="trace_level_error">ERROR</string>
    <string name="trace_level_warn">WARNING</string>
    <string name="trace_level_normal">NORMAL</string>
    <string name="trace_level_info">INFO</string>
    <string name="trace_level_debug">DEBUG</string>
    <string name="rh_configName" translatable="false">ConfigName</string>
    <string name="more_info_of_this_config">More Info of this config.</string>
    <string name="right_side_action_button">Right side action Button.</string>
    <string name="left_side_action_button">Left side action Button.</string>
    <string name="config_name">Config Name</string>
    <string name="framework">Framework</string>
    <string name="supernode">Supernode</string>
    <string name="community">Community</string>
    <string name="encrypt_key">Encrypt key</string>
    <string name="get_ip_from_supernode">Get IP from supernode</string>
    <string name="ip_address">IP address</string>
    <string name="subnet_mask">Subnet mask</string>
    <string name="more_options">More Options</string>
    <string name="encryption_method">Encryption method</string>
    <string name="supernode_2">Supernode 2</string>
    <string name="n2n_v3" translatable="false">n2n v3</string>
    <string name="n2n_v2" translatable="false">n2n v2</string>
    <string name="n2n_v2s" translatable="false">n2n v2s</string>
    <string name="n2n_v1" translatable="false">n2n v1</string>
    <string name="n2n_go" translatable="false">N2N GO</string>
    <string name="device_description">Device Description</string>
    <string name="mac_address">MAC address</string>
    <string name="dns_server_ip_address">DNS server IP address</string>
    <string name="gateway_ip_address">Gateway IP address</string>
    <string name="local_port">Local port</string>
    <string name="automatically_detect_local_ip">Automatically detect local IP</string>
    <string name="local_ip">Local IP</string>
    <string name="hole_punch_interval">Hole-Punch interval</string>
    <string name="mtu">MTU</string>
    <string name="save">Save</string>
    <string name="trace_level">Trace level:</string>
    <string name="accept_multicast_mac_addresses">Accept multicast MAC addresses</string>
    <string name="enable_full_header_encryption">Enable full header encryption</string>
    <string name="supernodes_are_running_dynamic_ips">Supernodes are running dynamic IPs</string>
    <string name="enable_packet_forwarding">Enable packet forwarding</string>
    <string name="use_http_tunnel">Use HTTP tunnel</string>
    <string name="current_config">Current Config:</string>
    <string name="connect_on_boot">Connect on boot</string>
    <string name="delete">Delete</string>
    <string name="clone">Clone</string>
    <string name="whats_next">What\'s Next?</string>
    <string name="select">Select</string>
    <string name="use">Use</string>
    <string name="n_copy">Copy</string>
    <string name="copy">Copy</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="check_update">Check Updates</string>
    <string name="about">About</string>
    <string name="no_config_selected">No config selected!</string>
    <string name="coming_soon">Coming Soon..</string>
    <string name="no_further_pages_in_the_browsing_history">No further pages in the browsing history.</string>
    <string name="logo_of_the_app">Logo image of the APP.</string>
    <string name="server">Server</string>
    <string name="room_code">Room Code</string>
    <string name="room_password">Room Password</string>
    <string name="f_service_is_running">%s service is running</string>

</resources>
