<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_config_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/config_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_setting_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_n2n_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_config_name"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/framework" />

            <Spinner
                android:id="@+id/sp_workingFramework"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/frameworks" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_super_node"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_n2n_version"
            android:hint="@string/supernode">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_super_node"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_community"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_super_node"
            android:hint="@string/community">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_community"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_encrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_community"
            android:hint="@string/encrypt_key">
            <!--app:passwordToggleEnabled="true"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_encrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
            <!--android:inputType="textPassword"-->

        </com.google.android.material.textfield.TextInputLayout>

        <!--boolean-->
        <CheckBox
            android:id="@+id/get_ip_from_supernode_check_box"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/til_encrypt"
            android:text="@string/get_ip_from_supernode" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/get_ip_from_supernode_check_box"
            android:hint="@string/ip_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_ip_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_net_mask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_ip_address"
            android:hint="@string/subnet_mask">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_net_mask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/config_item_default_netmask"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dev_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_net_mask"
            android:hint="@string/device_description"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_dev_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/more_setting_check_box"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/til_dev_desc"
            android:text="@string/more_options" />

        <RelativeLayout
            android:id="@+id/rl_more_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/more_setting_check_box"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_n2n_encryption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/encryption_method"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/encryption_method" />

                <Spinner
                    android:id="@+id/til_encryption_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_super_node_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_n2n_encryption"
                android:hint="@string/supernode_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_super_node_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_mtu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_super_node_2"
                android:hint="@string/mtu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_mtu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_hole_punch_Interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_mtu"
                android:hint="@string/hole_punch_interval">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_hole_punch_interval"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_local_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_hole_punch_Interval"
                android:hint="@string/local_ip">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_local_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/check_box_local_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_local_ip"
                android:text="@string/automatically_detect_local_ip" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_local_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/check_box_local_ip"
                android:hint="@string/local_port">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_local_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_gateway_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_local_port"
                android:hint="@string/gateway_ip_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_gateway_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_dns_server_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_gateway_ip"
                android:hint="@string/dns_server_ip_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_dns_server_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_mac_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_dns_server_ip"
                android:hint="@string/mac_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_mac_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--android:layout_below="@id/til_local_ip"-->

            <!--boolean-->
            <RelativeLayout
                android:id="@+id/rl_resolve_super_node_ip_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_mac_address">

                <CheckBox
                    android:id="@+id/resolve_super_node_ip_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/resolve_super_node_ip_check_box"
                    android:text="@string/supernodes_are_running_dynamic_ips" />
            </RelativeLayout>


            <!--boolean-->
            <RelativeLayout
                android:id="@+id/rl_allow_routing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_resolve_super_node_ip_check_box">

                <CheckBox
                    android:id="@+id/allow_routing_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/allow_routing_check_box"
                    android:text="@string/enable_packet_forwarding" />
            </RelativeLayout>

            <!--boolean-->
            <RelativeLayout
                android:id="@+id/rl_drop_multicast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_allow_routing">

                <CheckBox
                    android:id="@+id/accept_multicast_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/accept_multicast_check_box"
                    android:text="@string/accept_multicast_mac_addresses" />
            </RelativeLayout>

            <!--boolean-->
            <RelativeLayout
                android:id="@+id/rl_header_enc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_drop_multicast">

                <CheckBox
                    android:id="@+id/header_enc_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/header_enc_check_box"
                    android:text="@string/enable_full_header_encryption" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_use_http_tunnel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_header_enc"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/use_http_tunnel_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/use_http_tunnel_check_box"
                    android:text="@string/use_http_tunnel" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_trace_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_use_http_tunnel">

                <TextView
                    android:id="@+id/tv_trace_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trace_level" />

                <Spinner
                    android:id="@+id/spinner_trace_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_trace_level" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_more_setting"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ll_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorButton"

                    android:text="@string/save" />
                <!--<Button-->
                <!--android:layout_weight="0.5"-->
                <!--android:id="@+id/btn_delete"-->
                <!--android:text="delete"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"/>-->
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>
