<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_share"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appFlyout_menuItem_height"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="2dp">

            <ImageView
                android:id="@+id/item_icon_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_share"
                android:tint="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/item_icon_share"
                android:text="@string/share"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_contact"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appFlyout_menuItem_height"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="2dp">

            <ImageView
                android:id="@+id/item_icon_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_contact_us"
                android:tint="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/iv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/item_icon_contact"
                android:ellipsize="end"
                android:text="@string/contact_us"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_feedback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appFlyout_menuItem_height"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="2dp">

            <ImageView
                android:id="@+id/item_icon_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_feedback"
                android:tint="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/iv_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/item_icon_feedback"
                android:ellipsize="end"
                android:text="@string/feedback"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_check_update"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appFlyout_menuItem_height"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="2dp">

            <ImageView
                android:id="@+id/item_icon_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:tint="@color/colorTextPrimary"
                android:src="@drawable/ic_check_for_update" />

            <TextView
                android:id="@+id/tv_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/item_icon_update"
                android:text="@string/check_update"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appFlyout_menuItem_height"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="2dp">

            <ImageView
                android:id="@+id/item_icon_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_about" />

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/item_icon_about"
                android:text="@string/about"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:background="@color/c_gray" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo_of_the_app"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_app_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_app_name"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>